<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.signup.SignUpFragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crear_usuario"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp" />

    <EditText
        android:id="@+id/inputNombres"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/nombres"
        android:padding="10dp"
        android:textColorHint="#BBBBBB"
        android:textColor="#FFFFFF"
        android:background="@drawable/edittext_border"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="32dp" />

    <EditText
        android:id="@+id/inputApellidos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/apellidos"
        android:padding="10dp"
        android:textColorHint="#BBBBBB"
        android:textColor="#FFFFFF"
        android:background="@drawable/edittext_border"
        app:layout_constraintTop_toBottomOf="@id/inputNombres"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="32dp" />

    <EditText
        android:id="@+id/inputTipo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/tipo"
        android:padding="10dp"
        android:textColorHint="#BBBBBB"
        android:textColor="#FFFFFF"
        android:background="@drawable/edittext_border"
        app:layout_constraintTop_toBottomOf="@id/inputApellidos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="32dp" />

    <EditText
        android:id="@+id/inputUsuario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/usuario_fiedl"
        android:padding="10dp"
        android:textColorHint="#BBBBBB"
        android:textColor="#FFFFFF"
        android:background="@drawable/edittext_border"
        app:layout_constraintTop_toBottomOf="@id/inputTipo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="32dp" />

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/password_field"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColorHint="#BBBBBB"
        android:textColor="#FFFFFF"
        android:background="@drawable/edittext_border"
        app:layout_constraintTop_toBottomOf="@id/inputUsuario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="32dp" />

    <EditText
        android:id="@+id/inputRePassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/repetir_contrase_a"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColorHint="#BBBBBB"
        android:textColor="#FFFFFF"
        android:background="@drawable/edittext_border"
        app:layout_constraintTop_toBottomOf="@id/inputPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="32dp" />

    <Button
        android:id="@+id/btnCreateUser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/crear_cuenta"
        app:layout_constraintTop_toBottomOf="@id/inputRePassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="32dp" />

    <TextView
        android:id="@+id/textSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/iniciar_sesi_n"
        android:textColor="@android:color/holo_blue_dark"
        app:layout_constraintTop_toBottomOf="@id/btnCreateUser"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>